<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="amazing_service">Amazing 20%</string>
    <string name="good_service">Good 18%</string>
    <string name="ok_service">OK 15%</string>
    <string name="bad_service">Bad 0%</string>
    <string name="round_up_tip">Round up Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="cost_of_amount">Cost of Service %s</string>
    <string name="tip_amount">Tip Amount %s</string>
    <string name="total_amount">Total Amount %s</string>
</resources>