<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="23dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/costOfService"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/howIsTheWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintTop_toBottomOf="@id/costOfService"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/tipOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/howIsTheWork"
        app:layout_constraintStart_toStartOf="parent"
        android:checkedButton="@id/optionTwentyPercent">

        <RadioButton
            android:id="@+id/optionTwentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_service"/>

        <RadioButton
            android:id="@+id/optionEighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_service"/>

        <RadioButton
            android:id="@+id/optionFifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_service"/>

        <RadioButton
            android:id="@+id/optionZeroPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_service"/>

    </RadioGroup>

    <Switch
        android:id="@+id/roundUpTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOption"
        android:checked="true"/>
    
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/roundUpTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/costOfAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cost of service $100"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tip Amount $10"
        app:layout_constraintTop_toBottomOf="@id/costOfAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Total Amount $110"
        app:layout_constraintTop_toBottomOf="@id/tipAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="499dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/totalAmount"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>